bug5792: adjust to Java-11 deprecations (Number constructors, reflection, Hamcrest, minor AWT changes)