@@ -38,7 +38,9 @@ public class ConcurrentWeakHashMapTest {
     @Test
     public void testPutAndPutAgain() {
         ConcurrentWeakHashMap<Integer, String> m = new ConcurrentWeakHashMap<>();
+        @SuppressWarnings("deprecation") // we really want distinct instances here
         Integer one1 = new Integer(1);
+        @SuppressWarnings("deprecation") // we really want distinct instances here
         Integer one2 = new Integer(1);
         assertNotSame(one1, one2);
         m.put(one1, "a");
@@ -51,7 +53,7 @@ public class ConcurrentWeakHashMapTest {
     @Test
     public void testRemoveWithSame() {
         ConcurrentWeakHashMap<Integer, String> m = new ConcurrentWeakHashMap<>();
-        Integer one = new Integer(1);
+        Integer one = Integer.valueOf(1);
         m.put(one, "a");
         m.remove(one);
         assertTrue(m.isEmpty());
@@ -60,7 +62,7 @@ public class ConcurrentWeakHashMapTest {
     @Test
     public void testRemoveImpactOnKeySetAndEntrySet() {
         ConcurrentWeakHashMap<Integer, String> m = new ConcurrentWeakHashMap<>();
-        Integer one = new Integer(1);
+        Integer one = Integer.valueOf(1);
         m.put(one, "a");
         Set<Integer> keySet = m.keySet();
         Set<Entry<Integer, String>> entrySet = m.entrySet();
@@ -75,7 +77,9 @@ public class ConcurrentWeakHashMapTest {
     @Test
     public void testRemoveWithEqual() {
         ConcurrentWeakHashMap<Integer, String> m = new ConcurrentWeakHashMap<>();
+        @SuppressWarnings("deprecation") // we really want distinct instances here
         Integer one1 = new Integer(1);
+        @SuppressWarnings("deprecation") // we really want distinct instances here
         Integer one2 = new Integer(1);
         assertNotSame(one1, one2);
         m.put(one1, "a");
@@ -86,7 +90,7 @@ public class ConcurrentWeakHashMapTest {
     @Test
     public void removeThrougKeySet() {
         ConcurrentWeakHashMap<Integer, String> m = new ConcurrentWeakHashMap<>();
-        Integer one1 = new Integer(1);
+        Integer one1 = Integer.valueOf(1);
         m.put(one1, "a");
         final Set<Integer> keySet = m.keySet();
         Iterator<Integer> keySetIter = keySet.iterator();
